# free_rs

./: Cargo.toml  README.md
crates/advanced_traits/src/: lib.rs  main.rs
crates/clap_demo/: Cargo.toml
crates/closures_demo/src/: lib.rs  main.rs
crates/demo/examples/: from_into.rs
crates/demo/src/: main.rs
crates/error_demo/: Cargo.toml
crates/error_demo/examples/: result.rs
crates/error_demo/src/: anyhow.rs  lib.rs  main.rs
crates/generics_demo/: Cargo.toml
crates/generics_demo/src/: lib.rs  main.rs
crates/grrs/: Cargo.toml
crates/grrs/src/: main.rs
crates/handlebars_demo/: Cargo.toml
crates/handlebars_demo/examples/: quick.rs
crates/hello-async/examples/: atomic.rs  channel.rs  channel1.rs  counter.rs
crates/hello-async/src/: main.rs
crates/iterators_demo/src/: lib.rs  main.rs
crates/life_time/src/: display.rs  excrept.rs  lib.rs  longest.rs  main.rs
crates/minigrep/src/: lib.rs  main.rs
crates/minigrep1/: Cargo.toml
crates/minigrep1/src/: lib.rs  main.rs
crates/oop_demo/: Cargo.toml
crates/oop_demo/src/: lib.rs  oop.rs
crates/ownership_demo/src/: lib.rs  main.rs
crates/patterns_demo/src/: lib.rs
crates/smart_pointers_demo/: Cargo.toml
crates/smart_pointers_demo/src/: lib.rs  main.rs  rc_code.rs  refcell.rs  refcell_list.rs
crates/tcp_client_demo/: Cargo.toml
crates/tcp_client_demo/src/: main.rs
crates/tcp_server_demo/: Cargo.toml
crates/tcp_server_demo/src/: main.rs
crates/thread_demo/examples/: channel.rs  channel_clone_multiple.rs  deadlock.rs  mutex.rs  sync.rs
crates/udp_client_demo/: Cargo.toml
crates/udp_server_demo/: Cargo.toml
(+5 files in other folders)
