[workspace]

resolver = "2"

members = [ "crates/closures_demo",
    "crates/demo",
    "crates/error_demo",
    "crates/generics_demo",
    "crates/grrs", "crates/handlebars_demo",
    "crates/hello-async",
    "crates/life_time",
    "crates/minigrep", "crates/minigrep1",
    "crates/oop_demo",
    "crates/ownership_demo", "crates/patterns_demo",
    "crates/thread_demo"
]
