[workspace]

resolver = "2"

members = [
    "crates/advanced_traits",
    "crates/clap_demo",
    "crates/closures_demo",
    "crates/demo",
    "crates/error_demo",
    "crates/generics_demo",
    "crates/grrs",
    "crates/handlebars_demo",
    "crates/hello-async",
    "crates/iterators_demo",
    "crates/life_time",
    "crates/minigrep",
    "crates/minigrep1",
    "crates/oop_demo",
    "crates/ownership_demo",
    "crates/patterns_demo", 
    "crates/smart_pointers_demo",
    "crates/tcp_client_demo",
    "crates/tcp_server_demo",
    "crates/thread_demo"
, "crates/udp_client_demo", "crates/udp_server_demo"]
